# p2panda-ffi

./: .gitignore  Cargo.toml  Makefile  README.md
examples/go/multi-draw/: README.md  go.mod  main.go
examples/go/simple-chat/: README.md  main.go
go/p2panda_ffi/: p2panda_ffi.go  p2panda_ffi.h  p2panda_ffi_test.go
go/p2panda_ffi/nodebuilder/: nodebuilder.go
nodejs/: example.js
nodejs/p2panda_ffi/: p2panda_ffi-ffi.d.ts  p2panda_ffi-ffi.js  p2panda_ffi.d.ts  p2panda_ffi.js
nodejs/src/: index.ts
python/: example.py
python/p2panda_ffi/: p2panda_ffi.py
src/: builder.rs  core.rs  ephemeral_stream.rs  node.rs  topic_stream.rs
