[package]
name = "p2panda-ffi"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["staticlib", "cdylib"]
name = "p2panda_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
futures-util = { version = "0.3.32", default-features = false }
p2panda = "0.6.0"
p2panda-core = "0.6.0"
thiserror = "2.0.18"
tokio = "1.52.1"
uniffi = { version = "0.31.1", features = ["cli", "tokio"] }

[build-dependencies]
uniffi = { version = "0.31.1", features = ["build"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "unwind"
strip = true
